<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>Y2RobMotion</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="wodbs02221@gmail.com">Jaeyun Sim</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>yaml-cpp</depend>
  <depend>Y2Matrix</depend>
  <depend>Y2Kinematics</depend>
  <depend>Y2Trajectory</depend>
  <depend>gforce_control</depend>
  <depend>lbr_fri_idl</depend>
  <depend>lbr_fri_ros2</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
