<?xml version="1.0"?>
<package format="3">
  <name>y2_isaac_bridge</name>
  <version>0.0.1</version>
  <description>Bridge nodes between Y2RobMotion and Isaac Sim</description>

  <maintainer email="wodbs02221@gmail.com">Jaeyun Sim</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>